# Kindler

./: .gitignore  README.md  pyproject.toml
app/: config.py  main.py  queue.py
app/services/: confirm.py  convert.py  covers.py  detect.py  metadata.py  sender.py
app/static/css/: style.css
app/templates/: index.html
app/templates/partials/: job_card.html
tests/: test_sender.py
