[project]
name = "send-to-kindle"
version = "0.1.0"
description = "FastAPI app konwertujaca pliki i artykuly, i wysylajaca je na Send-to-Kindle przez Gmaila"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # rdzeń
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",              # bez tego uploady nie działają
    "pydantic-settings",
    "itsdangerous",                  # SessionMiddleware

    # mail
    "aiosmtplib",

    # baza / stan jobów
    "sqlmodel",
    "aiosqlite",
    "greenlet",                      # wymagane przez SQLAlchemy async

    # pliki, konwersja, ekstrakcja
    "ebooklib",
    "trafilatura",
    "pymupdf",
    "puremagic",
    "nh3",
    "httpx",
    "python-slugify",

    # higiena
    "structlog",
    "slowapi",
]

[project.optional-dependencies]
# uv sync --extra oauth  -> tylko gdyby ktoś inny miał logować się swoim Gmailem
oauth = [
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
    "cryptography",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "aiosmtpd",                      
    "types-python-slugify",
]

[project.scripts]
stk = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]