[project]
name = "send-to-kindle"
version = "0.1.0"
description = "FastAPI app that converts files and articles and sends them to Send-to-Kindle via Gmail"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # core
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",              # required for uploads to work
    "pydantic-settings",
    "itsdangerous",                  # SessionMiddleware

    # mail
    "aiosmtplib",

    # database / job state
    "sqlmodel",
    "aiosqlite",
    "greenlet",                      # required by SQLAlchemy async

    # files, conversion, extraction
    "ebooklib",
    "trafilatura",
    "pymupdf",
    "puremagic",
    "nh3",
    "httpx",
    "python-slugify",

    # hygiene
    "structlog",
    "slowapi",
]

[project.optional-dependencies]
# uv sync --extra oauth  -> only if someone else needs to log in with their own Gmail
oauth = [
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
    "cryptography",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "aiosmtpd",                      
    "types-python-slugify",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]